--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body>
 
-    <!-- Header  for Desktop -->
+    <!--========================================================= Header  for Desktop -->
     <header id="header_desc">
         <div class="container">
             <div class="row align-items-center">
@@ -79,28 +79,35 @@
         </div>
     </header>
 
-    <!-- Main  for Desktop -->
+    <!--==========================================================Main  for Desktop -->
     <main id="main_d">
         <div class="container">
 
             <div class="row">
-                <!------------------------------------Main left for Desktop -->
-                <div class="main_left col-10">
+                <!-------------------------------Main left for Desktop -->
+                <div class="main_left col-9">
 
                     <!-----------------Main left Navigation  for Desktop -->
                     <ul class="main_left_nav d-flex">
 
                         <!-- Navigation item 1   -->
-                        <li href="#" class="ml_nav_item">Lorem Ipsum
-                            <i class="fa-solid fa-angle-right"></i>
+                        <li href="#" class="ml_nav_item">
+                            <a href="#" class="nav_item">
+                                Lorem Ipsum
+                                <i class="fa-solid fa-angle-right"></i>
+                            </a>
+
                         </li>
                         <!-- Navigation item 2   -->
-                        <li href="#" class="ml_nav_item">Lorem Ipsum
-                            <i class="fa-solid fa-angle-right"></i>
+                        <li href="#" class="ml_nav_item">
+                            <a href="#" class="nav_item">Lorem Ipsum
+                                <i class="fa-solid fa-angle-right"></i></a>
                         </li>
                         <!-- Navigation item 3   -->
-                        <li href="#" class="ml_nav_item">Lorem Ipsum
-                            <i class="fa-solid fa-angle-right"></i>
+                        <li href="#" class="ml_nav_item">
+                            <a href="#" class="nav_item">Lorem Ipsum
+                                <i class="fa-solid fa-angle-right"></i>
+                            </a>
                         </li>
                     </ul>
 
@@ -108,48 +115,71 @@
                     <section class="main_left_header">
                         <div class="row">
 
-                            <!---- Header Product Images on Main left for Desktop -->
-                            <div class="col-5 main_left_header_images">
+                            <!---- Header Product Images on Main left for Desktop(left) -->
+                            <div class="col-4 main_left_header_images">
 
                                 <div class="row">
                                     <!-- Big image Header on Main left for Desktop -->
-                                    <div class="col-12 big-images">
-                                        <img class="big-images" src="Images/samsung-43-led-smart-tv.png"
+                                    <div class="col-12 ">
+                                        <img class="big-image" src="Images/samsung-43-led-smart-tv.png"
                                             alt="SamsungTvImageOnMainLeft">
                                     </div>
-
-                                    <!-- Small images Header on Main left for Desktop -->
-                                    <div class="row small-images">
-                                        <!-- Image 1 -->
-                                        <div class="col-md-2 col-md-offset-1 small-img">
-                                            <img src="Images/smasung-led-main-1.png" alt="SamsungImage-1-main-left-top">
-                                        </div>
-                                        <!-- Image 2  -->
-                                        <div class="col-md-2 small-img">
-                                            <img src="Images/samsung-led-main-2.png" alt="SamsungImage-2-main-left-top">
-
-                                        </div>
-                                        <!-- Image 3 -->
-                                        <div class="col-md-2 small-img">
-                                            <img src="Images/samsung-led-main-3.png" alt="SamsungImage-3-main-left-top">
-
-                                        </div>
-                                        <!-- Image 4 -->
-                                        <div class="col-md-2 small-img">
-                                            <img src="Images/samsung-led-main-4.png" alt="SamsungImage-4-main-left-top">
-
-                                        </div>
-                                        <!-- Image 5 -->
-                                        <div class="col-md-2 small-img">
-                                            <img src="Images/play-image-main-5.png" alt="PlayImage-5-main-left-top">
-
-                                        </div>
-                                    </div>
                                 </div>
+                                    <!-- Small images Header on Main left for Desktop -->
+                                    <div class="small-images-slider">
+
+                                        <!-- Small Images for Slider -->
+                                        <div class="row">
+
+                                            <!-- Slider Control Left -->
+                                            <div class="col-md-1">
+                                                <a href="#">
+                                                    <img src="Images/main_slider_leftIcon.png"
+                                                        alt=" MainHeaderImagesSliderLeftIcon">
+                                                </a>
+                                            </div>
+                                            <!-- Image 1 -->
+                                            <div class="col-md-2  small-img">
+                                                <img src="Images/smasung-led-main-1.png"
+                                                    alt="SamsungImage-1-main-left-top">
+                                            </div>
+                                            <!-- Image 2  -->
+                                            <div class="col-md-2 small-img">
+                                                <img src="Images/samsung-led-main-2.png"
+                                                    alt="SamsungImage-2-main-left-top">
+
+                                            </div>
+                                            <!-- Image 3 -->
+                                            <div class="col-md-2 small-img">
+                                                <img src="Images/samsung-led-main-3.png"
+                                                    alt="SamsungImage-3-main-left-top">
+
+                                            </div>
+                                            <!-- Image 4 -->
+                                            <div class="col-md-2 small-img">
+                                                <img src="Images/samsung-led-main-4.png"
+                                                    alt="SamsungImage-4-main-left-top">
+
+                                            </div>
+                                            <!-- Image 5 -->
+                                            <div class="col-md-2 small-img">
+                                                <img src="Images/play-image-main-5.png" alt="PlayImage-5-main-left-top">
+
+                                            </div>
+                                            <!-- Slider Control Right-->
+                                            <div class="col-md-1">
+                                                <a href="#"><img src="Images/main_slider_rightIcon.png"
+                                                        alt="MainHeaderImagesSliderLeftIcon"></a>
+                                            </div>
+
+                                        </div>
+
+                                    </div>
+                                
                             </div>
 
-                            <!-- --Header Product Properties on Main left for Desktop -->
-                            <div class="col-7 main_left_header_property">
+                            <!-- --Header Product Properties on Main left for Desktop(right) -->
+                            <div class="col-8 main_left_header_property">
                                 <!-- Header property Title on Main left for Desktop -->
                                 <div class="mlh_property_title">
                                     <p>Samsung 43" LED Smart TV 4K UHD (UE43TU7540UXRU)</p>
@@ -236,11 +266,31 @@
 
                 </div>
 
-                <!-----------------------------------------Main right for Desktop -->
-                <div class="main_right col-2"></div>
-
+                <!--------------------------------Main right for Desktop -->
+                <div class="main_right col-3"></div>
 
             </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
             <!---------------------------Footer of Main  for Desktop -->
             <section id="main_footer_d">
