--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
             <div class="row">
                 <!-------------------------------Main left for Desktop -->
-                <div class="main_left col-9">
+                <section class="main_left col-10">
 
                     <!-----------------Main left Navigation  for Desktop -->
                     <ul class="main_left_nav d-flex">
@@ -96,7 +96,6 @@
                                 Lorem Ipsum
                                 <i class="fa-solid fa-angle-right"></i>
                             </a>
-
                         </li>
                         <!-- Navigation item 2   -->
                         <li href="#" class="ml_nav_item">
@@ -116,85 +115,78 @@
                         <div class="row">
 
                             <!---- Header Product Images on Main left for Desktop(left) -->
-                            <div class="col-4 main_left_header_images">
+                            <div class="col-6 main_left_header_images">
 
+                                <!-- Big image Header on Main left for Desktop -->
                                 <div class="row">
-                                    <!-- Big image Header on Main left for Desktop -->
                                     <div class="col-12 ">
                                         <img class="big-image" src="Images/samsung-43-led-smart-tv.png"
                                             alt="SamsungTvImageOnMainLeft">
                                     </div>
                                 </div>
-                                    <!-- Small images Header on Main left for Desktop -->
-                                    <div class="small-images-slider">
 
-                                        <!-- Small Images for Slider -->
-                                        <div class="row">
+                                <!-- Small Images for Slider Header on Main left for Desktop -->
+                                <div class="row  align-items-center small-images-slider">
 
-                                            <!-- Slider Control Left -->
-                                            <div class="col-md-1">
-                                                <a href="#">
-                                                    <img src="Images/main_slider_leftIcon.png"
-                                                        alt=" MainHeaderImagesSliderLeftIcon">
-                                                </a>
-                                            </div>
-                                            <!-- Image 1 -->
-                                            <div class="col-md-2  small-img">
-                                                <img src="Images/smasung-led-main-1.png"
-                                                    alt="SamsungImage-1-main-left-top">
-                                            </div>
-                                            <!-- Image 2  -->
-                                            <div class="col-md-2 small-img">
-                                                <img src="Images/samsung-led-main-2.png"
-                                                    alt="SamsungImage-2-main-left-top">
-
-                                            </div>
-                                            <!-- Image 3 -->
-                                            <div class="col-md-2 small-img">
-                                                <img src="Images/samsung-led-main-3.png"
-                                                    alt="SamsungImage-3-main-left-top">
-
-                                            </div>
-                                            <!-- Image 4 -->
-                                            <div class="col-md-2 small-img">
-                                                <img src="Images/samsung-led-main-4.png"
-                                                    alt="SamsungImage-4-main-left-top">
-
-                                            </div>
-                                            <!-- Image 5 -->
-                                            <div class="col-md-2 small-img">
-                                                <img src="Images/play-image-main-5.png" alt="PlayImage-5-main-left-top">
-
-                                            </div>
-                                            <!-- Slider Control Right-->
-                                            <div class="col-md-1">
-                                                <a href="#"><img src="Images/main_slider_rightIcon.png"
-                                                        alt="MainHeaderImagesSliderLeftIcon"></a>
-                                            </div>
-
-                                        </div>
+                                    <!-- Slider Control Left -->
+                                    <div class="col-md-1">
+                                        <a href="#">
+                                            <img src="Images/main_slider_leftIcon.png"
+                                                alt=" MainHeaderImagesSliderLeftIcon">
+                                        </a>
+                                    </div>
+                                    <!-- Image 1 -->
+                                    <div class="col-md-2  small-img">
+                                        <img src="Images/smasung-led-main-1.png" alt="SamsungImage-1-main-left-top">
+                                    </div>
+                                    <!-- Image 2  -->
+                                    <div class="col-md-2 small-img">
+                                        <img src="Images/samsung-led-main-2.png" alt="SamsungImage-2-main-left-top">
 
                                     </div>
-                                
+                                    <!-- Image 3 -->
+                                    <div class="col-md-2 small-img">
+                                        <img src="Images/samsung-led-main-3.png" alt="SamsungImage-3-main-left-top">
+
+                                    </div>
+                                    <!-- Image 4 -->
+                                    <div class="col-md-2 small-img">
+                                        <img src="Images/samsung-led-main-4.png" alt="SamsungImage-4-main-left-top">
+
+                                    </div>
+                                    <!-- Image 5 -->
+                                    <div class="col-md-2 small-img">
+                                        <img src="Images/play-image-main-5.png" class="playImage" alt="PlayImage-5-main-left-top">
+
+                                    </div>
+                                    <!-- Slider Control Right-->
+                                    <div class="col-md-1">
+                                        <a href="#"><img src="Images/main_slider_rightIcon.png"
+                                                alt="MainHeaderImagesSliderLeftIcon"></a>
+                                    </div>
+
+                                </div>
+
                             </div>
 
                             <!-- --Header Product Properties on Main left for Desktop(right) -->
-                            <div class="col-8 main_left_header_property">
+                            <div class="col-6 main_left_header_property">
                                 <!-- Header property Title on Main left for Desktop -->
                                 <div class="mlh_property_title">
-                                    <p>Samsung 43" LED Smart TV 4K UHD (UE43TU7540UXRU)</p>
+                                    <p>Samsung 43" LED Smart TV 4K UHD
+                                        <br> (UE43TU7540UXRU)</p>
                                 </div>
 
                                 <!-- Header property SubTitle on Main left for Desktop -->
-                                <div class="mlh_property_subtitle">
+                                <div class="mlh_property_subtitle d-flex align-items-center ">
 
                                     <!-- Header property SubTitle Barcode-->
                                     <div class="mlh-property-subtt-barcode">
-                                        <span>Məhsul kodu:233701</span>
+                                        <span>Məhsul kodu: 233701</span>
                                     </div>
                                     <!-- Header property SubTitle Rating-->
                                     <div class="mlh-property-subtt-rating">
-                                        <span class="mlh-property-subtt-rating-score">4.2/5</span>
+                                        <span class="mlh-property-subtt-rating-score">4.2/ <span>5</span> </span>
                                         <span class="mlh-property-subtt-rating-star">
                                             <i class="fa-duotone fa-star"></i>
                                             <i class="fa-duotone fa-star"></i>
@@ -216,40 +208,40 @@
                                 <!-- Header property Features on Main left for Desktop -->
                                 <div class="mlh_property_features">
                                     <div class="row">
-                                        <div class="col-md-4">
-                                            <button>
+                                        <div class="col-md-4 ">
+                                            <button class="features_item">
                                                 Endirimli qiymət
                                                 <i class="fa-regular fa-badge"></i>
                                             </button>
                                         </div>
                                         <div class="col-md-4">
-                                            <button>Stokta var
+                                            <button class="features_item">Stokta var
                                                 <i class="fa-regular fa-box-circle-check"></i>
                                             </button>
                                         </div>
                                         <div class="col-md-4">
-                                            <button>
+                                            <button class="features_item">
                                                 Keyfiyyətə Zəmanət
                                                 <i class="fa-sharp fa-solid fa-shield-check"></i>
                                             </button>
                                         </div>
 
                                         <div class="col-md-4">
-                                            <button>
+                                            <button class="features_item">
                                                 <i class="fa-light fa-calendar-clock"></i>
                                                 14 gün ərzində
                                                 qaytarılma
                                             </button>
                                         </div>
                                         <div class="col-md-4">
-                                            <button>
+                                            <button class="features_item">
                                                 <i class="fa-thin fa-wallet"></i>
                                                 Qapıda nağd və
                                                 ya onlayn ödəmə
                                             </button>
                                         </div>
                                         <div class="col-md-4">
-                                            <button>
+                                            <button class="features_item">
                                                 <i class="fa-light fa-truck"></i>
                                                 3 saata pulsuz
                                                 çatdırılma
@@ -264,10 +256,10 @@
                     </section>
 
 
-                </div>
+                </section>
 
                 <!--------------------------------Main right for Desktop -->
-                <div class="main_right col-3"></div>
+                <section class="main_right col-2"></section>
 
             </div>
 
